<resources>
    <string name="app_name">Effective Mobile</string>
    <string name="zihuatanejo">Zihuatanejo, Gro</string>
    <string name="select_cate">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best seller</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>

    <string-array name="brand">
        <item>Samsung</item>
        <item>IPhone</item>
        <item>Huawei</item>
    </string-array>

    <string-array name="price">
        <item>$300 - $500</item>
        <item>$500 - $1000</item>
        <item>$1000 - $2000</item>
    </string-array>

    <string-array name="size">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
        <item>6.5 to 7.5 inches</item>
    </string-array>
    <string name="title_features">Features</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="text_view_see_more">See more</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
</resources>