<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomSheetDialog"
    style="@style/AppTheme"
    android:background="@drawable/background_white_corners">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeBTn"
            android:layout_width="@dimen/bottomsheet_width"
            android:layout_height="@dimen/bottomsheet_height"
            android:layout_marginStart="@dimen/margin_start_45"
            android:layout_marginTop="@dimen/margin_top_25"
            android:background="@drawable/background_close_btn"
            android:padding="@dimen/default_padding_7"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_options"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/filter_opti"
            app:layout_constraintBottom_toBottomOf="@+id/closeBTn"
            app:layout_constraintEnd_toStartOf="@+id/donetxt"
            app:layout_constraintStart_toEndOf="@+id/closeBTn"
            app:layout_constraintTop_toTopOf="@+id/closeBTn" />

        <TextView
            android:id="@+id/donetxt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottomsheet_height"
            android:layout_marginTop="@dimen/margin_top_25"
            android:layout_marginEnd="@dimen/margin_end_20"
            android:background="@drawable/background_done_btn"
            android:gravity="center"
            android:paddingStart="@dimen/default_padding_start_20"
            android:paddingEnd="@dimen/default_padding_end_20"
            android:text="@string/done"
            android:textAppearance="@style/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_40"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/filter_opti"
            app:layout_constraintStart_toStartOf="@+id/closeBTn"
            app:layout_constraintTop_toBottomOf="@+id/closeBTn" />

        <Spinner
            android:id="@+id/spin_brand"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="@+id/donetxt"
            app:layout_constraintStart_toStartOf="@+id/closeBTn"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_15"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/filter_opti"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/spin_brand" />

        <Spinner
            android:id="@+id/spin_price"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="@+id/donetxt"
            app:layout_constraintStart_toStartOf="@+id/closeBTn"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_15"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="@style/filter_opti"
            app:layout_constraintStart_toStartOf="@+id/closeBTn"
            app:layout_constraintTop_toBottomOf="@+id/spin_price" />

        <Spinner
            android:id="@+id/spin_size"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="@+id/donetxt"
            android:paddingBottom="@dimen/default_padding_bottom_10"
            app:layout_constraintStart_toStartOf="@+id/closeBTn"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>