<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.example.home_screen.home_screen.ui.HomeFragment">


    <ImageView
        android:id="@+id/vector2"
        android:layout_width="12dp"
        android:layout_height="16dp"
        android:layout_toStartOf="@id/location"
        android:background="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintTop_toTopOf="@+id/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="119dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center_horizontal|top"
        android:text="@string/zihuatanejo"
        android:textAppearance="@style/zihuatanejo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location" />

    <TextView
        android:id="@+id/select_cate"
        android:layout_width="193dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal|top"
        android:text="@string/select_cate"
        android:textAppearance="@style/select_cate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/view_all"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_horizontal|top"
        android:textSize="15sp"
        android:text="@string/view_all"
        android:textAppearance="@style/view_all"
        app:layout_constraintBottom_toBottomOf="@+id/select_cate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select_cate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_cate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_search"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_category">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="false"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:paddingStart="32dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="6dp"
            android:textColor="#80010035"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:padding="8dp"
        android:background="@drawable/ellipse_activate"
        android:src="@drawable/ic_baseline_qr_code_24"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textViewHomeStoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hot_sales"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewPagerHomeStore"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSeeMoreHomeStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_see_more"
        android:textColor="@color/button_see_more"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/viewPagerHomeStore"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerHomeStore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBestSellerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeStoreLabel" />

    <TextView
        android:id="@+id/textViewBestSellerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_seller"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvBestSeller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerHomeStore" />

    <TextView
        android:id="@+id/textViewSeeMoreHomeStore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_see_more"
        android:textColor="@color/button_see_more"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerHomeStore"
        app:layout_constraintBottom_toTopOf="@+id/rvBestSeller"
     />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBestSeller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBestSellerLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>